[project]
name = "venus-beamline-diagnostic-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Jessica Rehak",email = "rehak@lbl.gov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ops-ecris @ git+https://github.com/lbnl-88ops/ecris.git@v1.0.0",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
